--- a/source/_posts/2016-09-16-也谈“阿里月饼”事件.md
+++ b/source/_posts/2016-09-16-也谈“阿里月饼”事件.md
@@ -21,3 +21,8 @@ tags:
 在网络上，似乎每一个人都变身成经验丰富的管理者，为阿里出谋划策。认为自己的方法是完美的，但其实只是图一时嘴快，满足部分人的心理需求而已。并且拿出各种案例，来反驳阿里的做法。这种五十步笑百步的心态，只不过是自欺欺人而已。
 
 作为软件工程师也应该从自身出发，寻找解决问题的办法，而不应寄希望于企业或者资本家来体谅脑力劳动者的辛苦。如果每个软件工程师都能一言不合就创业的话，或许也能不会惯出这种不把程序员当人的企业了。
+
+贴网上与本文观点类似的评论，感觉这样冷静的分析在程序员中鲜有。
+
+![](\img\alimooncakeref1.png)
+![](\img\alimooncakeref2.png)
