--- a/source/_posts/2016-09-16-也谈“阿里月饼”事件.md
+++ b/source/_posts/2016-09-16-也谈“阿里月饼”事件.md
@@ -24,5 +24,8 @@ tags:
 
 贴网上与本文观点类似的评论，感觉这样冷静的分析在程序员中鲜有。
 
+Ada李力（北京未来佳人科技有限公司CEO）的微博
 ![](\img\alimooncakeref1.png)
+
+吴军博士的微博
 ![](\img\alimooncakeref2.png)
