真的无法在IDE里编辑，最多只能用来deploy.

--- a/source/_posts/2016-10-02-双语网站速度最优配置.md
+++ b/source/_posts/2016-10-02-双语网站速度最优配置.md
@@ -23,7 +23,7 @@ tags:
 
 双语网站面向不同人群，大多数情况是国籍不同。由于众所周知的原因，中英双语的网站是很难保证速度的。经常是国内访问速度快，海外访问就慢；海外访问快，国内访问就慢。总是鱼与熊掌不可兼得。要论搭建双语网站的难度之最，应该非中英双语莫属。
 
-起先本博客是搭建在Github Pages, 使用CloudFlare作为DNS和CDN的平台。但发现国外访问速度不错，但国内速度只能呵呵了。但CloudFlare是提供中国节点的啊……至少官网上是这个[说的]（https://www.cloudflare.com/cdn/）。一查才知，原来中国节点是面向大客户计划的，并且需要备案。如果我要有备案，谁还用CloudFlare，看来此路不通。经过研究（Google搜索）发现影响网站访问速度的主要有两大因素，一是网站域名解析的速度，其次是网站服务器的访问速度。
+起先本博客是搭建在Github Pages, 使用CloudFlare作为DNS和CDN的平台。但发现国外访问速度不错，但国内速度只能呵呵了。但CloudFlare是提供中国节点的啊……至少官网上是这个[说的](https://www.cloudflare.com/cdn/)。一查才知，原来中国节点是面向大客户计划的，并且需要备案。如果我要有备案，谁还用CloudFlare，看来此路不通。经过研究（Google搜索）发现影响网站访问速度的主要有两大因素，一是网站域名解析的速度，其次是网站服务器的访问速度。
 
 网站服务器的速度不敢恭维，因为Github已经被墙。但由于CloudFlare的CDN，网站还是可以访问的。但一查DNS的route，速度不敢恭维。后来才知道CloudFlare的域名解析国内访问也是各种不稳定。
 
@@ -62,4 +62,4 @@ Integration：Travis-Ci（海外）Coding IDE（国内）
 
 ### 后记
 
-现在想想，不明白为什么自己弄双语博客
+现在想想，不明白为什么自己弄双语博客,  也只能说是自找麻烦。
