Add categories and tags to posts

--- a/source/_posts/2006-02-15-晨思.md
+++ b/source/_posts/2006-02-15-晨思.md
@@ -3,8 +3,12 @@ layout: post
 title: 晨思
 date: '2006-02-15 20:15:00 -0400'
 comments: true
+categories:
+	- 文艺
+tags:
+	- 变化
+	- 大学
 abbrlink: 3d44f617
-showAd: true
 ---
 静静的，想写些什么，但又感觉空空的没什么可以写的。
 
