--- a/source/_posts/2006-08-05-昏昏谔谔.md
+++ b/source/_posts/2006-08-05-昏昏谔谔.md
@@ -3,8 +3,11 @@ layout: post
 title: 昏昏谔谔
 date: '2006-08-05 20:15:00 -0400'
 comments: true
+categories:
+	- 文艺
+tags:
+	- 杂想
 abbrlink: f147031
-showAd: true
 ---
 
 最近可能是热傻了~
