--- a/source/_posts/2006-08-07-忘记-忘记的.markdown
+++ b/source/_posts/2006-08-07-忘记-忘记的.markdown
@@ -3,12 +3,14 @@ layout: post
 title: 忘记-忘记的
 date: '2006-08-07 20:15:00 -0400'
 comments: true
+categories:
+	- 文艺
 tags:
-  - Feeling
+	- 感悟
+	- 记忆力
 keywords: Feeling
 description: 忘记-忘记的
 abbrlink: 35ef3944
-showAd: true
 ---
 
 自认为记忆不好，忘事是常有的事，而且儿时的记忆也忘记大半。
