--- a/source/_posts/2006-10-03-校园-诗之章.md
+++ b/source/_posts/2006-10-03-校园-诗之章.md
@@ -3,8 +3,12 @@ layout: post
 title: '校园,诗之章'
 date: '2006-10-03 20:15:00 -0400'
 comments: true
+categories:
+	- 文艺
+tags:
+	- 校园
+	- 大学
 abbrlink: 4b8118b7
-showAd: true
 ---
 “神说：‘要有光‘,就有了光。神看光是好的，就把光暗分开了。神称光为昼，称暗为夜。有晚上，有早晨，这是头一天。“——《圣经 旧约》
 
