--- a/source/_posts/2006-10-03-自然的心.md
+++ b/source/_posts/2006-10-03-自然的心.md
@@ -4,7 +4,10 @@ title: 自然的心
 date: '2006-10-03 20:15:00 -0400'
 comments: true
 abbrlink: 556653a4
-showAd: true
+categories:
+	- 文艺
+tags:
+	- 感悟
 ---
 总是想写些虚幻，遥远的文字。将生活远远抛在身后。不愿看自己在生活面前衣衫不整，而愿在梦中富丽堂皇。哲学家说过，人是矛盾的载体。我一点都不否认自己的矛盾，甚至陷入矛盾的漩涡，在左与右之间徘徊。
 
