--- a/source/_posts/2006-10-04-常住海边.md
+++ b/source/_posts/2006-10-04-常住海边.md
@@ -3,8 +3,12 @@ layout: post
 title: 常住海边
 date: '2006-10-04 20:15:00 -0400'
 comments: true
+categories:
+	- 感悟
+tags:
+	- 诗
+	- 海子
 abbrlink: 70686fc8
-showAd: true
 ---
 
 常住海边，不为看海边日出，不为看月挂云端，不为看潮起浪滚，不为看暴风骤雨。
