--- a/source/_posts/2006-10-04-春的期待.md
+++ b/source/_posts/2006-10-04-春的期待.md
@@ -3,8 +3,13 @@ layout: post
 title: 春的期待
 date: '2006-10-04 20:15:00 -0400'
 comments: true
+categories:
+	- 文艺
+tags:
+	- 大话西游
+	- 感悟
+	- 春天
 abbrlink: 15e31eb7
-showAd: true
 ---
 春天花儿开，鸟儿归。
 
