--- a/source/_posts/2007-01-02-新年的雪.md
+++ b/source/_posts/2007-01-02-新年的雪.md
@@ -4,9 +4,13 @@ title: 新年的雪
 date: '2007-01-02 20:15:00 -0400'
 comments: true
 abbrlink: fe42753d
-showAd: true
+categories:
+	- 文艺
+tags:
+	- 雪
 ---
 冬季的第一场雪，也是新年的第一场雪，悄无声息的降临到古城。
+
 伏在窗前，大口呼吸着凉爽的空气。冬天就在眼前。
 
 雪花，冬季的象征。当第一片雪花飘落，我才意识到冬季的到来。
