--- a/source/_posts/2009-01-15-T3航站楼.md
+++ b/source/_posts/2009-01-15-T3航站楼.md
@@ -4,7 +4,12 @@ title: T3航站楼
 date: '2009-01-15 20:15:00 -0400'
 comments: true
 abbrlink: b2f92747
-showAd: true
+categories:
+	- 游记
+tags:
+	- 北京机场
+	- T3航站楼
+	- 飞机
 ---
 
 又要在此发泄小市民情节了。
