--- a/source/_posts/2009-02-05-中国神话.md
+++ b/source/_posts/2009-02-05-中国神话.md
@@ -4,7 +4,10 @@ title: 中国神话
 date: '2009-02-05 20:15:00 -0400'
 comments: true
 abbrlink: 2488c1b0
-showAd: true
+categories:
+	- 文艺
+tags:
+	- 神话
 ---
 看希腊神话，发现其中的众多天神有血有肉，让人好不羡慕。然而纵寻中国书籍，对于神话的记录的寥寥无几。难道我中华泱泱大国，五千年古国，竟然连区区的神话都没有么。
 
@@ -19,10 +22,17 @@ showAd: true
 我们可以看看现今的魔幻小说，其间充斥着天使、精灵以及撒旦等西方神魔。对于西方的神话我们似乎都了解个大概，甚至连天使的官阶都很了解（治权天使，德性天使，权势天使，王国天使，大天使，天使）。但是对于夸父逐日，精卫填海等中国神话我们却知之甚少，至少很难知道故事的全貌。再看了引用中国神话的小说，由于中国神话未成体系的缘故，作者对于所引用事物都要进行大段描写，方能使读者理解所述之事。神话应当作为一种文学模式存在于当今社会。这也是为防止文化侵略，弘扬中国文化之法。
 
 记录神话的古籍有：
-《山海经》《楚辞》《穆天子传》《搜神记》《述异记》
+
+* 《山海经》
+* 《楚辞》
+* 《穆天子传》
+* 《搜神记》
+* 《述异记》
+
 以上古籍中记录神话居多。
 
 对于想完善中国神话体系的想法似乎并不是只有我一人想到，前有矛盾，如今起点文学网正在举办“中国古代神话谱”完善活动。发现自己想到的事情总是先一步被别人做了，是自己太懒，还是……
 
 以一则神话为本文之末：
+
 天气蒙鸿，萌芽兹始，遂分天地，肇立乾坤，启阴感阳，分布元气，乃孕中和，是为人也。首生盘古，垂死化身；气成风云，声为雷霆，左眼为日，右眼为月，四肢五体为四极五岳，血液为江河，筋脉为地里，肌肉为田土，发髭为星辰，皮毛为草木，齿骨为金石，精髓为珠玉，汗流为雨泽，身之诸虫，因风所感，化为黎氓。 ——《五运历年纪》
