--- a/source/_posts/2009-08-22-Tim-Braid.md
+++ b/source/_posts/2009-08-22-Tim-Braid.md
@@ -4,8 +4,15 @@ title: Tim Braid
 date: '2009-08-22 20:15:00 -0400'
 comments: true
 abbrlink: bf2e20d1
-showAd: true
+categories:
+	- 评说
+tags:
+	- 游戏
+	- Braid
+	- 感悟
 ---
+### 前言
+
 《Braid》是一款画风优美的2D卷轴动作解谜游戏。简单来说就是一款平面益智游戏。再简单来说就是休闲小游戏。虽然它小，也就100M左右，但它所描述的世界观却是宏伟深邃。
 
 主人公名叫Tim，穿着一身西装红头发的小伙子。故事的主线还是逃脱不了欧美骑士救公主的套路。Tim也是要去救公主，可Tim文质彬彬，一点也不像是能从恶人手中救出公主的勇士。但Tim不是凡人，他拥有控制时间的能力。
@@ -23,6 +30,8 @@ showAd: true
 剧情摘录如下（摘自网络）：
 
 黑色字是直接引用游戏内的剧本，红色字是为方便理解而添加的内容，并且作者还添加了游戏中未提及的史实。
+
+### 剧情介绍
 
 ------剧情介绍BEGIN------
 
@@ -133,6 +142,8 @@ showAd: true
 要建造一座大小合适的城堡，他需要非常多的石头。他现在手边有的这些，算是还不错的开始。
 
 ------剧情介绍END------
+
+### 后记
 
 如果没有这位作者细心的完善剧情，我估计到现在仍然一头雾水。现在我们终于看出了《Braid》所要表现的主线：原子弹的制造，即曼哈顿计划。人类史上这一伟大的计划竟然能这样巧妙的融入到游戏中，并且还加入了制作者的观点，不可谓巧妙。
 纵观当今游戏，在思想、效果、内涵上能超过此游戏的寥寥无几，怪不得《Braid》被游戏迷称为神作。
