--- a/source/_posts/2009-09-13-致命ID-记忆碎片.md
+++ b/source/_posts/2009-09-13-致命ID-记忆碎片.md
@@ -4,13 +4,18 @@ title: 《致命ID》&《记忆碎片》
 date: '2009-09-13 20:15:00 -0400'
 comments: true
 abbrlink: b7a9421a
-showAd: true
+categories:
+	- 评说
+tags:
+	- 电影
+	- 致命ID
+	- 记忆碎片
 ---
+### 前言
+
 看了不少恐怖片或者惊悚片，要说认为比较恐怖的，NO.1当属《咒怨》系列。看过一遍后再看，仍感身后阵阵凉意。对于恐怖片的喜爱还是只限于日韩片的心理悬疑系列，而欧美的血腥风格实在难以接受。
 
 但《致命ID》&《记忆碎片》却让我眼前一亮，看到欧美也有主题、手法新颖的一面。《致命ID》应该属于是惊悚类，而《记忆碎片》属于悬疑片。对于恐怖、惊悚还有悬疑片的分类，我是这样理解的，恐怖片是一些超自然现象为起因，比如鬼魂，怨灵等；惊悚片是一些超社会现象为起因，比如精神病，杀人狂等；而悬疑片简单来说更像福尔摩斯。
-
-
 
 ### 《致命ID》
 
@@ -32,8 +37,6 @@ showAd: true
 
 深层次的内涵我没有想，而是不想分析。感觉就像中学分析《狂人日记》一般，非要大家对某句话有一致的认识。艺术作品不是数学，没有固定的答案。一千个人心中有一千个哈姆雷特。所以作品更深的内涵只有自己去感受，自己去分析。
 
-
-
 ### 《记忆碎片》
 
 剧情很简单，就是一个患有短暂记忆失忆症的患者寻找杀害妻子的犯人的过程。跟片名一样，本片的内容是一段一段，就好似断断续续的记忆一般。
@@ -44,5 +47,6 @@ showAd: true
 
 本片表现手法也很特殊，采用彩色与黑白区分正叙与倒叙，并在本片的结尾巧妙的结合。情节环环相扣，没有一处冷场。很考验记忆力的一部片子。
 
+### 后记
 
 近两年出的片子看得差不多了，现在开始看00年左右的片子，而且只看IMDB 7.0以上的影片。看来我向电影达人又进一步O(∩_∩)O
