--- a/source/_posts/2009-10-09-游西峡-一.md
+++ b/source/_posts/2009-10-09-游西峡-一.md
@@ -4,7 +4,13 @@ title: 游西峡（一）
 date: '2009-10-09 20:15:00 -0400'
 comments: true
 abbrlink: a3c31d30
-showAd: true
+categories:
+	- 游记
+tags:
+	- 河南
+	- 西峡
+	- 老君洞
+	- 溶洞
 ---
 歌曲：《そばにいるね》
 
@@ -29,7 +35,9 @@ showAd: true
 
 
 很郁闷，忘了开闪光灯了，模式不对。不过要的就是这种朦胧美，专业摄影师都是这样。汗
+
 这个溶洞很小，很快就转完了。感觉相对于南方的溶洞，这就是个人文景点。
+
 不想天公不作美，刚从老君洞出来就听到滚滚雷声。只见一片黑压压的云盖住了远处的山头。
 
 
