--- a/source/_posts/2009-10-10-游西峡-二.md
+++ b/source/_posts/2009-10-10-游西峡-二.md
@@ -4,7 +4,12 @@ title: 游西峡（二）
 date: '2009-10-10 20:15:00 -0400'
 comments: true
 abbrlink: 93d5f1e8
-showAd: true
+categories:
+	- 游记
+tags:
+	- 河南
+	- 西峡
+	- 恐龙蛋遗迹园
 ---
 
 歌曲：《Hello Mr DJ》
