--- a/source/_posts/2009-10-18-一步目.md
+++ b/source/_posts/2009-10-18-一步目.md
@@ -4,7 +4,12 @@ title: 一步目
 date: '2009-10-18 20:15:00 -0400'
 comments: true
 abbrlink: 31bfb23d
-showAd: true
+categories:
+	- 文艺
+tags:
+	- 诗
+	- 海
+	- 禁锢
 ---
 一步之遥，有多远？
 
