--- a/source/_posts/2009-11-25-娘伪中眼.md
+++ b/source/_posts/2009-11-25-娘伪中眼.md
@@ -4,7 +4,12 @@ title: 娘伪中眼
 date: '2009-11-25 20:15:00 -0400'
 comments: true
 abbrlink: 969499a5
-showAd: true
+categories:
+	- 评说
+tags:
+	- 伪娘
+	- 男扮女装
+	- 萎蔫
 ---
 标题倒过来读。
 
