--- a/source/_posts/2009-11-27-从红警看战争.md
+++ b/source/_posts/2009-11-27-从红警看战争.md
@@ -4,7 +4,13 @@ title: 从红警看战争
 date: '2009-11-27 20:15:00 -0400'
 comments: true
 abbrlink: 107f8d80
-showAd: true
+categories:
+	- 评说
+tags:
+	- 红警
+	- 游戏
+	- 战争
+	- 感悟
 ---
 最近玩红色警戒3，虽然不算是高手，但也对游戏小有感悟。
 
