--- a/source/_posts/2011-03-25-智力运动发展之己见.md
+++ b/source/_posts/2011-03-25-智力运动发展之己见.md
@@ -4,7 +4,14 @@ title: 智力运动发展之己见
 date: '2011-03-25 20:15:00 -0400'
 comments: true
 abbrlink: 9685a9d7
-showAd: true
+categories:
+	- 评说
+tags:
+	- 智力运动
+	- 电子竞技
+	- 游戏
+	- 围棋
+	- 象棋
 ---
 **何谓智力运动？**
 
