--- a/source/_posts/2011-04-02-SC2群战的误区.md
+++ b/source/_posts/2011-04-02-SC2群战的误区.md
@@ -4,7 +4,12 @@ title: SC2群战的误区
 date: '2011-04-02 20:15:00 -0400'
 comments: true
 abbrlink: ec871717
-showAd: true
+categories:
+	- 评说
+tags:
+	- 游戏
+	- 星际争霸
+	- 感悟
 ---
 Warning：本文只适合低端玩家，高端请绕行。
 
