--- a/source/_posts/2013-07-16-围棋棋力与地雷.md
+++ b/source/_posts/2013-07-16-围棋棋力与地雷.md
@@ -4,7 +4,12 @@ title: 围棋棋力与地雷
 date: '2013-07-16 20:15:00 -0400'
 comments: true
 abbrlink: 57c39641
-showAd: true
+categories:
+	- 评说
+tags:
+	- 围棋
+	- 棋力
+	- 感想
 ---
 围棋的棋力分为10级到1级，1段到7段，职业初段到九段。
 
