--- a/source/_posts/2013-08-21-一个配音演员.md
+++ b/source/_posts/2013-08-21-一个配音演员.md
@@ -4,7 +4,13 @@ title: 一个配音演员
 date: '2013-08-21 20:15:00 -0400'
 comments: true
 abbrlink: 784a6da
-showAd: true
+categories:
+	- 评说
+tags:
+	- Troy Baker
+	- Hana Hayes
+	- 演员
+	- The Last Of US
 ---
 
 ![](\img\Troy_Baker.jpeg)
