--- a/source/_posts/2015-02-01-加拿大安大略省留学移民.md
+++ b/source/_posts/2015-02-01-加拿大安大略省留学移民.md
@@ -3,7 +3,13 @@ layout: post
 title: 加拿大安大略省留学移民
 date: '2016-08-15 23:47:00 -0400'
 comments: true
-showAd: true
+categories:
+	- 杂谈
+tags:
+	- 加拿大
+	- 安大略
+	- 留学
+	- 移民
 abbrlink: a487ac04
 ---
 
@@ -27,27 +33,27 @@ abbrlink: a487ac04
 1. 公司省提名名额
 
 	安省对于具有一定规模的企业，给予一定的省提名名额（有些像国内大城市的户口政策）。
-		
+
 	但此种提名最为简单，只要在公司是永久职工，且公司愿意支持，自己只需考过雅思（每科不低于6），支付申请费，即可申请移民。
 
 2. 研究生、博士省提名名额
 
 	在安省院校毕业的硕士或者博士，可以直接申请省提名。所需条件如下：
-			
+
 		硕士或博士
 		安省学校毕业
 		语言：雅思（每科不低于6）
 		目标居住省份是安省
 		居住在安省满一年
-			
+
 	满足以上，即可申请。申请费用$1500，但安省一年内大约有5000个名额左右，一般8月份之前就会名额已满，所以最好是前半年申请。
 
 3. 基于联邦人才库的省提名
 
 	联邦人才库是2015年开始实施的评分制，将希望申请移民的人士评分，达到一定分数的人才将放入人才库。
-		
+
 	安省筛选其中有意在安省工作的人才，给其发放邀请省提名邮件。在收到邮件后，申请人可以提交申请省提名。
-		
+
 	对于安省如何选择其中的人才，其标准目前仍不知。
 
 二、直接申请联邦经验类移民
@@ -60,7 +66,7 @@ abbrlink: a487ac04
 	语言（雅思平均分6分以上）
 	工作经验（需满1年以上）
 	配偶相关信息
-		
+
 所以即便通过评分，进入人才库，也无法保证必然获批。
 
 ### 国内大学毕业后移民加拿大方案
