--- a/source/_posts/2016-10-02-双语网站速度最优配置.md
+++ b/source/_posts/2016-10-02-双语网站速度最优配置.md
@@ -1,10 +1,16 @@
 ---
 title: 双语网站速度最优配置
-showAd: true
 comments: true
 abbrlink: 88900ae9
 date: 2016-10-02T21:25:02.000Z
-tags: null
+categories:
+	- 技术
+tags:
+	- 网站
+	- 双语
+	- DNS
+	- GitHub
+	- Coding
 ---
 
 ![](/img/bilingual_1.jpg)
