--- a/source/_posts/2006-02-10-夏夜月影.md
+++ b/source/_posts/2006-02-10-夏夜月影.md
@@ -3,8 +3,12 @@ layout: post
 title: 夏夜月影
 date: '2006-02-10 20:15:00 -0400'
 comments: true
+categories:
+	- 文艺
+tags:
+	- 诗
+	- 中秋
 abbrlink: 35a5f5b5
-showAd: true
 ---
 月下清风，夏影回荡。海边，河边，井边，只要有水的地方都是一丝清凉。水面如镜，皎月似璧。风下水波荡漾，虫鸣，蝉喧，风吹草叶沙沙声，月影无声。独自一人感受自然的静。
 
