--- a/source/_posts/2006-02-17-想写点东西的想法.md
+++ b/source/_posts/2006-02-17-想写点东西的想法.md
@@ -2,9 +2,12 @@
 layout: post
 title: 想写点东西的想法
 date: '2006-02-17 20:15:00 -0400'
+categories:
+	- 文艺
+tags:
+	- 写作
 comments: true
 abbrlink: 9b88dd33
-showAd: true
 ---
 不知道自己为什么，突然想写写东西。其实原来在新概念的时候就已经有过这样的想法。再次是卡了郭敬明写的《幻城》后，又有想写东西的欲望。这次是因为自己有了个写东西的空间。
 
