--- a/source/_posts/2008-11-11-我看的那些片.markdown
+++ b/source/_posts/2008-11-11-我看的那些片.markdown
@@ -3,19 +3,26 @@ layout: post
 title: 我看的那些片
 date: '2008-11-11 20:15:00 -0400'
 comments: true
+categories:
+	- 评说
 tags:
-  - Movie Review
+	- 电影
+	- 电视剧
+	- 越狱
+	- 我的女友是机器人
+	- Wanted Film
 keywords: Movie review
 description: 我看的那些片
 abbrlink: e686b3c9
-showAd: true
 ---
 ![](https://upload.wikimedia.org/wikipedia/en/9/98/Wanted_film_poster.jpg)
 
 抽枪，转身，挥臂，shoot。看着子弹在空中划过一道漂亮的S形。
+
 这是影片唯一给我震撼并牢记的一幕。
 
 维斯站在火车车厢之上，去执行一个命运的安排。当火车穿过一排排窗户，维斯清晰的看到了目标，傲慢地坐在老板椅上。维斯犹豫了，他不明白这是命运还是滥杀。FOX鼓励了他，并用自己的亲身经历告诉他，杀一人有时可救千人。但当维斯下定决心时，火车载着他们已经远去，目标所在的窗户已完全不在视野中。只见维斯，右手伸向腰间，在拔枪的同时扣动扳机。子弹如长了眼一般，划过一道弧线正中目标心脏。
+
 这就是刺客！刺客才有的技术，刺客才有的决心。
 
 现实我们是永远达不到这样的高度，但影片实现了，使我们感受了下高级刺客应有的境界。
@@ -27,11 +34,17 @@ showAd: true
 ![](http://file1.qidian.com/jpg/2009-6-17/9/2834.jpg)
 
 说实在初识广末凉子是在重返泡沫经济中。但这部片子才真正看出了她的演技。
+
 主题也挺伤感的。一对母女因为车祸，母亲的灵魂进入了女儿的身体，而母亲的身体却死亡了。于是母亲用女儿的身体代替女儿高考，学习。
+
 这感觉似乎并不那么悲伤，母亲死却相当于没死，女儿的面容又在身边。对于父亲这是多么幸福的一件的事。
+
 但身体毕竟是女儿的，再怎么也不能做伤害女儿身体的事。父亲是个好父亲，但他也是人。女儿身体里是自己的妻子，但却不能行鱼水之欢，无法掩饰他的荷尔蒙分泌过剩。当时看这片的时候就一直默想，如果这位父亲胆敢冲破最后的道德底线，这部片子就立马ALT+F4，然后SHIFT+DELETE。但是他没有，每当看到女儿的脸庞，他总会意识到这样做是错误的。
+
 这位父亲已经混乱了妻子和女儿，而且因为妻子灵魂的存在，他也一直未娶。作为妻子，这一切都看在眼里，但也无能为力。
+
 直到有一天女儿的灵魂回到自己的体内，但这只是暂时的，不一会母亲的灵魂又控制了身体。即使这样，作为父亲感到无限幸福，感觉幸福的三口之家又回来了。但好景不长，母亲的灵魂控制身体的时间越来越短，最终消失在这个世间。
+
 这个时候我任然认为这个父亲是幸福的，但在女儿的婚礼后，女儿却做了个只有母亲才对父亲做的动作。这时候父亲明白了，妻子为了让自己不再迷茫，不再混乱，假装女儿生活。自己亲手将自己的妻子嫁了别人（多混乱的逻辑）。
 
 一切就让它作为秘密，腐烂在心里。
@@ -39,8 +52,11 @@ showAd: true
 ![](http://images2.sina.com/newscenter/m/2008-06-03/1212426546_qWSmjo.jpg)
 
 吸引我的是这部片子的导演，是我的野蛮女友的导演。没想到跑到日本去拍片了。不过这部片剧情挺单调，就是一个男子如何和一个机器人培养出超越人机的情感。但中间加入了多笔时空转移。每一次时空转移，都影响着主角生活的历史；每一次时空转移，又一次次刷新了电影的结局。
+
 结局一：瘫痪一生，孤老而亡。死前将女机器送给年青的自己。
+
 结局二：女机器人将主人从使他一生瘫痪的事件中解救出来，并将主人年轻时的痛苦记忆一一消除。但无可避免东京大地震，机器人为救主人而报废在废墟中。主角因此一生从事科研，在年老时，将女机器人复原。孤老而死。
+
 结局三：遥远的未来，有一个女子和这个机器人长得一模一样。于是将机器人的记忆输入自己体内。发现自己爱上了男主角。于是穿越时空来到东京大地震后，男主角正抱着机器人痛哭的那时……
 
 这老头活了三遍，不知道他烦不烦。
