--- a/source/_posts/2009-01-24-回程感言.md
+++ b/source/_posts/2009-01-24-回程感言.md
@@ -4,7 +4,12 @@ title: 回程感言
 date: '2009-01-24 20:15:00 -0400'
 comments: true
 abbrlink: 6e96f928
-showAd: true
+categories:
+	- 游记
+tags:
+	- 北京机场
+	- T3航站楼
+	- 感悟
 ---
 《T3航站楼》续
 
