--- a/source/_posts/2009-11-29-花木兰.md
+++ b/source/_posts/2009-11-29-花木兰.md
@@ -4,7 +4,11 @@ title: 《花木兰》
 date: '2009-11-29 20:15:00 -0400'
 comments: true
 abbrlink: e4451b9a
-showAd: true
+categories:
+	- 评说
+tags:
+	- 电影
+	- 花木兰
 ---
 昨天和李去看电影，听说《花木兰》刚上映，于是就说看看吧。想看看国产的《花木兰》和迪斯尼动画版《花木兰》（简称动画版）差距有多大。
 
