--- a/source/_posts/2009-12-05-血腥但不恐怖的-电锯惊魂6.md
+++ b/source/_posts/2009-12-05-血腥但不恐怖的-电锯惊魂6.md
@@ -4,7 +4,11 @@ title: 血腥但不恐怖的《电锯惊魂6》
 date: '2009-12-05 20:15:00 -0400'
 comments: true
 abbrlink: 2a1f0d7a
-showAd: true
+categories:
+	- 评说
+tags:
+	- 电影
+	- 电锯惊魂
 ---
 《电锯惊魂6》终于出了。不是说它上映，而是……大家理解就好。
 
