--- a/source/_posts/2010-04-11-琼蕊耹.md
+++ b/source/_posts/2010-04-11-琼蕊耹.md
@@ -4,7 +4,11 @@ title: 琼蕊耹
 date: '2010-04-11 20:15:00 -0400'
 comments: true
 abbrlink: 3fd11c02
-showAd: true
+categories:
+	- 文艺
+tags:
+	- 梦
+	- 网名
 ---
 
 **本日志完全基于梦境，如有雷同纯属虚构！**
