--- a/source/_posts/2011-03-25-晕-洛杉矶之战.md
+++ b/source/_posts/2011-03-25-晕-洛杉矶之战.md
@@ -4,7 +4,11 @@ title: 晕！《洛杉矶之战》！
 date: '2011-03-25 20:15:00 -0400'
 comments: true
 abbrlink: a1a1074b
-showAd: true
+categories:
+	- 评说
+tags:
+	- 电影
+	- 洛杉矶之战
 ---
 无意间在Youtube上看到《洛杉矶之战》宣传片，感觉场面震撼，气势逼人。于是兴奋的跑到电影院。但当我走出影院，顿感阵阵眩晕，胃中如翻浆蹈海一般。不得不说这是一部让人看了后想吐的电影，没有之一。
 
