--- a/source/_posts/2011-03-27-萌-杀客同萌.md
+++ b/source/_posts/2011-03-27-萌-杀客同萌.md
@@ -4,7 +4,11 @@ title: 萌！《杀客同萌》！
 date: '2011-03-27 20:15:00 -0400'
 comments: true
 abbrlink: 481ce935
-showAd: true
+categories:
+	- 评说
+tags:
+	- 电影
+	- 杀客同萌
 ---
 刚看完这部影片，迫不及待的想跟大家分享。
 
@@ -21,21 +25,25 @@ showAd: true
 要想让越“院”计划顺利进行，女孩需要五样东西——地图，火，刀，钥匙，第五样物品在女孩的内心深处，需要自己寻找。女孩有一项特质，就是舞蹈跳得非常好，能够将观众深深地吸引住。每当音乐徐徐响起，女孩变进入心中的里世界，在老人的指导下完成寻找需要逃出精神病院的物品。
 
 地图：
-里世界是一片战火纷乱的场景，似乎像是一战的时候。女孩随同四个伙伴需要冲进敌军总部，将地图夺取过来。
-现实是女孩利用舞姿吸引住管理员，其一个伙伴趁机进入其办公室中将地图复印出来。
+>里世界是一片战火纷乱的场景，似乎像是一战的时候。女孩随同四个伙伴需要冲进敌军总部，将地图夺取过来。
+> 现实是女孩利用舞姿吸引住管理员，其一个伙伴趁机进入其办公室中将地图复印出来。
 
 火：
-里世界是一个中世纪的古堡，主角们乘着飞机从天而降，冲入古堡深处并夺取恶龙的火腺。
-现实是女孩同样用跳舞吸引住其他人，让其一伙伴可以轻松的从“市长”身上偷得打火机。
-这次事件过后，管理员已经察觉到一些异常，并且向她们声称如果这样的情况再继续下去，可能会为此而牺牲。但渴望自由的心情使得女孩们继续行动。
+> 里世界是一个中世纪的古堡，主角们乘着飞机从天而降，冲入古堡深处并夺取恶龙的火腺。
+
+> 现实是女孩同样用跳舞吸引住其他人，让其一伙伴可以轻松的从“市长”身上偷得打火机。
+
+> 这次事件过后，管理员已经察觉到一些异常，并且向她们声称如果这样的情况再继续下去，可能会为此而牺牲。但渴望自由的心情使得女孩们继续行动。
 
 刀：
-里世界是要追踪一辆高速行驶的列车，并解除其上的爆炸装置。可是当任务进行到快要成功的时候，有一个敌人突然袭击她们（没死透），并重启了爆炸装置。女孩的一个同伴为了减少牺牲，最终自己留在列车上。并随着巨响消失在爆炸波之中。
-现实是女孩和同伴们将厨师锁在厨房操作间。故伎重演，女孩用舞蹈吸引住厨师，然后伙伴趁机夺取厨师别在腰间的刀。但正当关键时候，地板上的水渍使播放机的电线短路。厨师回过神来，看到正在俯身到其腰间抽刀的少女，一掌将其打倒在地。并抽刀刺向这名少女。这位少女的妹妹为了保护她姐姐，用身体挡下了这一刀。但也从此那个这个世界。
+> 里世界是要追踪一辆高速行驶的列车，并解除其上的爆炸装置。可是当任务进行到快要成功的时候，有一个敌人突然袭击她们（没死透），并重启了爆炸装置。女孩的一个同伴为了减少牺牲，最终自己留在列车上。并随着巨响消失在爆炸波之中。
+
+>现实是女孩和同伴们将厨师锁在厨房操作间。故伎重演，女孩用舞蹈吸引住厨师，然后伙伴趁机夺取厨师别在腰间的刀。但正当关键时候，地板上的水渍使播放机的电线短路。厨师回过神来，看到正在俯身到其腰间抽刀的少女，一掌将其打倒在地。并抽刀刺向这名少女。这位少女的妹妹为了保护她姐姐，用身体挡下了这一刀。但也从此那个这个世界。
 
 钥匙：
-这次没有里世界，或许只是没有里世界的里世界而已。
-现实是管理员知道夺刀事件后非常恼火，并且女孩的一个同伴出卖了她们，从而又有两个同伴因此离开了那个世界。并且管理员的过激举动激怒了女孩，女孩抽出藏在桌下的刀子刺向了管理员的脖子。并顺手拽下了其挂在脖子上的钥匙。
+> 这次没有里世界，或许只是没有里世界的里世界而已。
+
+>现实是管理员知道夺刀事件后非常恼火，并且女孩的一个同伴出卖了她们，从而又有两个同伴因此离开了那个世界。并且管理员的过激举动激怒了女孩，女孩抽出藏在桌下的刀子刺向了管理员的脖子。并顺手拽下了其挂在脖子上的钥匙。
 
 一切准备齐全，女孩故意制作了一场火灾，并带着唯一存活的同伴趁着混乱冲出了精神病院的病房。但门口仍有许多守卫。这是女孩想到最后一样物品要从自身来寻找，她发现就是她自己。只有牺牲她，才能让她的同伴获救。于是她仍然利用舞蹈吸引守卫，让她的同伴成功逃脱出去。
 
