--- a/source/_posts/2011-04-01-梦境-是哆啦A梦的时空穿梭机.md
+++ b/source/_posts/2011-04-01-梦境-是哆啦A梦的时空穿梭机.md
@@ -4,7 +4,12 @@ title: 梦境，是哆啦A梦的时空穿梭机？
 date: '2011-04-01 20:15:00 -0400'
 comments: true
 abbrlink: 78bf31c0
-showAd: true
+categories:
+	- 文艺
+tags:
+	- 感悟
+	- 梦
+	- 时空穿梭
 ---
 做了很奇怪的一个梦。
 
