--- a/source/_posts/2011-05-15-伤感-或者感伤.md
+++ b/source/_posts/2011-05-15-伤感-或者感伤.md
@@ -4,7 +4,12 @@ title: 伤感，或者感伤。
 date: '2011-05-15 20:15:00 -0400'
 comments: true
 abbrlink: 4b42309a
-showAd: true
+categories:
+	- 文艺
+tags:
+	- 爱情
+	- 情感
+	- 感悟
 ---
 今天听了一天《心墙》和《未完的歌》。歌是很好听，可能是太伤感了，让我也觉得感伤了。所以想了很多。
 
