--- a/source/_posts/2011-06-30-一个梦想.md
+++ b/source/_posts/2011-06-30-一个梦想.md
@@ -4,7 +4,10 @@ title: 一个梦想
 date: '2011-06-30 20:15:00 -0400'
 comments: true
 abbrlink: ff4a0ef6
-showAd: true
+categories:
+	- 文艺
+tags:
+	- 梦想
 ---
 这是很小的时候就存在的一个梦想，一直萦绕的心房，无法放下。那就是做一款自己喜爱的电子游戏。看似简单，但对我来说又完全充满挑战。
 
@@ -23,4 +26,3 @@ showAd: true
 我们的梦想有事就是这么一件小事，在别人眼中很不起眼，但对自己却有着非凡的意义。有梦想就别放弃了！
 
 一个梦想
-
