--- a/source/_posts/2013-06-18-呵呵-哦-之我见.md
+++ b/source/_posts/2013-06-18-呵呵-哦-之我见.md
@@ -4,7 +4,11 @@ title: “呵呵”“哦”之我见
 date: '2013-06-18 20:15:00 -0400'
 comments: true
 abbrlink: 105c643c
-showAd: true
+categories:
+	- 评说
+tags:
+	- 网络用语
+	- 感想
 ---
 先插入两段解释：
 
