--- a/source/_posts/2014-02-17-给简书的一点建议.markdown
+++ b/source/_posts/2014-02-17-给简书的一点建议.markdown
@@ -3,12 +3,14 @@ layout: post
 title: 给简书的一点建议
 date: '2014-02-17 12:46:00 -0400'
 comments: true
+categories:
+	- 评说
 tags:
-  - Review
+	- 简书
+	- 建议
 keywords: 'Jianshu, Review, Suggestion'
 description: Suggestion on Jianshu website.
 abbrlink: c4e320f3
-showAd: true
 ---
 ![](http://i1.sinaimg.cn/dy/c/sd/2011-02-28/U2494P1T1D22028511F21DT20110228172620.jpg)
 
