--- a/source/_posts/2014-02-21-断翅.md
+++ b/source/_posts/2014-02-21-断翅.md
@@ -4,7 +4,10 @@ title: 断翅
 date: '2014-02-21 20:15:00 -0400'
 comments: true
 abbrlink: c2ba49a9
-showAd: true
+categories:
+	- 文艺
+tags:
+	- 诗
 ---
 梦·翱翔
 
