--- a/source/_posts/2016-09-16-也谈“阿里月饼”事件.md
+++ b/source/_posts/2016-09-16-也谈“阿里月饼”事件.md
@@ -1,10 +1,16 @@
 ---
 title: 也谈“阿里月饼”事件
-showAd: true
 comments: true
 abbrlink: c5821abc
 date: 2016-09-16 22:09:35
+categories:
+	- 评说
 tags:
+	- 阿里巴巴
+	- 中秋
+	- 月饼
+	- 程序员
+	- 工程师
 ---
 ![](\img\alimooncake.png)
 
