Stop deploying to github

--- a/source/404.md
+++ b/source/404.md
@@ -4,6 +4,8 @@ title: 404 Page Not Found
 comments: false
 ---
 
-迷路了？
+# 迷路了？
 
-回到[起点](http://cn.abnerchou.me)
+![Lost](/img/lost.jpg)
+
+## 回到[起点](http://cn.abnerchou.me)
