update two posts pics

--- a/source/_posts/2009-10-09-游西峡-一.md
+++ b/source/_posts/2009-10-09-游西峡-一.md
@@ -12,7 +12,6 @@ tags:
 	- 老君洞
 	- 溶洞
 ---
-歌曲：《そばにいるね》
 
 本来回来当晚就打算完成这篇博文的，但每每都提不起精神。今天下午逃了半天班，闲来无事权当练打字了。
 
@@ -20,7 +19,7 @@ tags:
 
 于是10月4日早晨6点出发。经过6个小时深山中长途跋涉，终于到达了第一站老君洞。传说乃是当年太上老君炼丹之处。
 
-
+![老君碑](\img\xixia_1_1.jpg)
 
 
 此碑记载了太上老君炼仙丹的秘诀，至今无人破解。想要破解基本是不可能的，这简直就是天书——一个字都不认识。突感中华文字之博大精深，中学语文之重要。
@@ -29,10 +28,11 @@ tags:
 
 再附上几张溶洞内的图片：
 
+![西峡溶洞1](\img\xixia_1_2.jpg)
 
+![西峡溶洞2](\img\xixia_1_3.jpg)
 
-
-
+![西峡溶洞3](\img\xixia_1_4.jpg)
 
 很郁闷，忘了开闪光灯了，模式不对。不过要的就是这种朦胧美，专业摄影师都是这样。汗
 
@@ -40,16 +40,21 @@ tags:
 
 不想天公不作美，刚从老君洞出来就听到滚滚雷声。只见一片黑压压的云盖住了远处的山头。
 
+![乌云](\img\xixia_1_5.jpg)
 
 第二站就是XX谷和野人谷（第一个想不起来了，没啥景）。XX谷基本就是一直走，一直走，走到山头。然后走过一段公路就到野人谷了。
 
 翻了半天照片集，发现照的都太清晰，完全没有朦胧的感觉，很失败。随便上几张吧：
 
+![观月台](\img\xixia_1_6.jpg)
+
 上图是在海拔1400+m的观月台上拍摄所得。感觉不是很高。
 
-
+![一线天](\img\xixia_1_7.jpg)
 
 一线天光，如上帝驾临。或许山是最接近神的地方。
+
+![碧水](\img\xixia_1_8.jpg)
 
 青山碧水，何人居所？
 
