--- a/source/_posts/2009-10-10-游西峡-二.md
+++ b/source/_posts/2009-10-10-游西峡-二.md
@@ -12,7 +12,6 @@ tags:
 	- 恐龙蛋遗迹园
 ---
 
-歌曲：《Hello Mr DJ》
 
 今天悲剧了，中午回家被雨淋，到家后发现没电，无聊中快要熟睡时突然来电，打开电脑发现要下的东西竟然忘点开始了。还好明天放假，稍微抚慰下受伤的心灵。调皮
 
@@ -20,17 +19,21 @@ tags:
 
 以前一直是在电视中看，这回是算近距离接触了。
 
+![园口](\img\xixia_2_1.jpg)
 
+![头顶恐龙蛋](\img\xixia_2_2.jpg)
 
 上图并不是放在地上的恐龙蛋，而是悬在头顶。这是因为这个隧道是沿着化石层开采的而成的，我们正是走在这个化石层的下方。
 
+![天井](\img\xixia_2_3.jpg)
 
 上图是天井，3~4之间就是所说的化石层。照片中感觉不是很深，但实际上有5层高。（照片中这只手很有《DEAD SPACE》海报的感觉^_^）
 
-
+![博物馆内景](\img\xixia_2_4.jpg)
 
 这是恐龙博物馆的内景，里面还有好多各地开采的恐龙蛋。但每种蛋到底会产出何种恐龙，这都没有任何记录。馆内陈设很有《侏罗纪公园》的感觉。
 
+![霸王龙](\img\xixia_2_5.jpg)
 
 给我们帅气的霸王龙来张特写。太大了，实在照不全，反正尾巴也没啥看的就CUT掉了。
 
