--- a/source/_posts/2016-11-02-VPS服务器笔记.md
+++ b/source/_posts/2016-11-02-VPS服务器笔记.md
@@ -18,7 +18,7 @@ date: 2016-11-02T20:30:32.000Z
 
 #### 大名在外无需解释的服务商
 
-[阿里云](https://cn.aliyun.com/)，[腾讯云](https://www.qcloud.com/)，以及国内一众VPS服务商。国内访问速度肯定没得说，但域名备案是一个相当头痛的事，而且阿里云的备案不能用在腾讯云的服务器上，切换服务商需要重新备案。备案将主机与域名绑定，使选择服务商上面失去了相当大的自由度。
+[阿里云](https://cn.aliyun.com/)，[腾讯云](https://www.qcloud.com/)，以及国内一众VPS服务商。国内访问速度肯定没得说，但域名备案是一个相当头痛的事，而且阿里云的备案不能用在腾讯云的服务器上，切换服务商需要重新备案。备案将主机与域名绑定，使选择服务商上面失去了相当大的自由度。虽然支持多地备案，但根据[此处回复](http://bbs.qcloud.com/thread-9889-1-1.html)，顶级域名只能在注册服务商处使用，次级域名不限。
 
 但如果面向群体是国内用户，使用国内的运营商是毋庸置疑的。但如果考虑方便，自由的程度，请移步看以下服务商。
 
