update theme to 1.3

--- a/source/404.md
+++ b/source/404.md
@@ -2,10 +2,11 @@
 layout: page
 title: 404 Page Not Found
 comments: false
+noDate: true
 ---
 
 # 迷路了？
 
 ![Lost](/img/lost.jpg)
 
-## 回到[起点](http://cn.abnerchou.me)
+## [回到起点](http://cn.abnerchou.me)
