--- a/source/_posts/2013-08-17-由一道围棋题想到的.md
+++ b/source/_posts/2013-08-17-由一道围棋题想到的.md
@@ -12,11 +12,11 @@ tags:
 ---
 黑先，黑1和白2交换后黑棋如何整形？
 
-![](\img\weiqithought_01.png)
+![问题](\img\weiqithought_01.png)
 
 答案：
 
-![](\img\weiqithought_02.png)
+![答案](\img\weiqithought_02.png)
 
 黑1枷很多人答对了，以下黑弃子包封，黑厚，且留有L6冲下的余味，黑好。
 
