--- a/source/_posts/2016-09-16-也谈“阿里月饼”事件.md
+++ b/source/_posts/2016-09-16-也谈“阿里月饼”事件.md
@@ -12,7 +12,7 @@ tags:
 	- 程序员
 	- 工程师
 ---
-![](\img\alimooncake.png)
+![阿里月饼](\img\alimooncake.png)
 
 本来不想谈论这个事件，奈何实在看不惯网上那种键盘侠的，只说不练，很难想象他们是否是一个合格的软件工程师。
 
@@ -31,7 +31,7 @@ tags:
 贴网上与本文观点类似的评论，感觉这样冷静的分析在程序员中鲜有。
 
 Ada李力（北京未来佳人科技有限公司CEO）的微博
-![](\img\alimooncakeref1.PNG)
+![Ada李力（北京未来佳人科技有限公司CEO）的微博](\img\alimooncakeref1.PNG)
 
 吴军博士的微博
-![](\img\alimooncakeref2.PNG)
+![吴军博士的微博](\img\alimooncakeref2.PNG)
