--- a/source/_posts/2016-10-02-双语网站速度最优配置.md
+++ b/source/_posts/2016-10-02-双语网站速度最优配置.md
@@ -13,7 +13,7 @@ tags:
 	- Coding
 ---
 
-![](/img/bilingual_1.jpg)
+![双语](/img/bilingual_1.jpg)
 
 ### 杂言（可以略过的文字）
 
@@ -67,15 +67,15 @@ NS   |  cn  | f1g1ns2.dnspod.net | Auto
 
 IP地址：
 
-![](/img/bilingual_3.png)
+![IP](/img/bilingual_3.png)
 
 明显两个子域已经指向不同的IP地址了。而且从Ping值上也可看出地域的区别。
 
 速度 （使用360测速）：
 
-cn.abnerchou.me ![](/img/bilingual_4.png)
+cn.abnerchou.me ![360 测速](/img/bilingual_4.png)
 
-en.abnerchou.me ![](/img/bilingual_5.png)
+en.abnerchou.me ![360 测速](/img/bilingual_5.png)
 
 已经不用说什么了，en子域完全无法解析，更不用提速度差距了。
 
