--- a/source/_posts/2016-11-21-寻找於春景君.md
+++ b/source/_posts/2016-11-21-寻找於春景君.md
@@ -65,7 +65,7 @@ Lost Mouse 丢失的鼠标或者丢失的老鼠……
 
 lostmouse.net虽然无法连接上，但这个域名并不是知名的邮件服务商。那么就有另一种可能，就是是个人域名。既然以前使用过，那一定有网络存档。到[web.archive.org](http://web.archive.org)一看，从2002-2011都有记录，但2004以后域名就无人使用了。以下图片是[2004年最后一次存档](https://web.archive.org/web/20040924150742/http://www.lostmouse.net/)：
 
-![於春景(Bill Yu)个人主页2004存档](/img/billyu1.png)
+![Bill Yu个人主页2004存档](/img/billyu1.png)
 
 如果想了解於春景君有多牛，可以点开其“我的程序生涯”感受一下。
 
