add new blog link

--- a/source/_posts/2016-12-20-博客搬迁.md
+++ b/source/_posts/2016-12-20-博客搬迁.md
@@ -10,6 +10,6 @@ abbrlink: 96f8d899
 date: 2016-12-20 09:16:47
 ---
 
-本博客已迁移至 [legofan.cc](http://legofan.cc), 详细迁移过程请参看新博。
+本博客已迁移至 [legofan.cc](http://legofan.cc), 详细迁移过程请参看[新博](http://legofan.cc/new-blog-new-feel-new-year/)。
 
 本博仍欢迎留言评论，所有联系方式不变。
